[tool.poetry]
name = "codaio"
version = "0.6.0"
description = "Python wrapper for Coda.io API"
authors = ["MB <mb@blaster.ai>"]
license = "MIT"
readme='README.md'
homepage='https://github.com/Blasterai/codaio'
documentation='https://codaio.readthedocs.io/en/latest/index.html'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
attrs = "^23.1"
python-dateutil = "^2.8"
inflection = "^0.3.1"
envparse = "^0.2.0"
decorator = "^4.4"

[poetry.group.dev.dependencies]
pytest = "^5.1"
coverage = "^4.5"
pytest-cov = "^2.7"
pydoc-markdown = "^2.0"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

